# virtualenv-rye-discovery

./: .gitignore  README.md  pyproject.toml  tests.sh  tox.ini  toxfile.py
.github/workflows/: python-package.yml
src/virtualenv_rye_discovery/: plugin.py
