[project]
name = "virtualenv-rye-discovery"
version = "0.2.0"
description = "Use Rye to discover or fetch Python versions"
authors = [
    { name = "Ulrik Sverdrup", email = "ulrik.sverdrup@gmail.com" }
]
dependencies = [
    "virtualenv~=20.23",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
requires-python = ">= 3.7"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build]
exclude = [
    "/.github",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.entry-points."virtualenv.discovery"]
rye = "virtualenv_rye_discovery.plugin:RyeDiscovery"
